force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/PBS_gBUILD_ProjectBuilding__c.object-meta.xml
<CustomObject>
    <description>gBUILD Project Building: Data related to a particular Project-Building</description>
    <label>gBUILD Project Building</label>
    <nameField>
        <displayFormat>gbPb_{00000}</displayFormat>
        <label>PBSgBUILDPB</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gBUILD Project Buildings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>