force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ActualUtilitySav__c.field-meta.xml
<CustomField>
    <fullName>ActualUtilitySav__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actual savings when calculated at a project building level</description>
    <inlineHelpText>Enter calculated building-level utility savings (Btu/yr).</inlineHelpText>
    <label>Utility Savings Actual</label>
    <referenceTo>PBS_gBUILD_UtilitySavings__c</referenceTo>
    <relationshipLabel>gBUILD Project Buildings (Utility Savings Actual)</relationshipLabel>
    <relationshipName>gBUILD_Project_Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>