force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/BldgId__c.field-meta.xml
<CustomField>
    <fullName>BldgId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The PBS Building associated with this record.</description>
    <inlineHelpText>The PBS Building associated with this record.</inlineHelpText>
    <label>Building ID</label>
    <referenceTo>PBS_Building__c</referenceTo>
    <relationshipLabel>gBUILD Project Buildings</relationshipLabel>
    <relationshipName>L_PBS_gBUILD_ProjectBuilding_2_PBS_Build</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>