force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfCoolingHeatingPlantsLccfigsPckPd__c.field-meta.xml
<CustomField>
    <fullName>EperfCoolingHeatingPlantsLccfigsPckPd__c</fullName>
    <description>Payback Period (in years):</description>
    <inlineHelpText>Please provide payback period (in years) = total investment cost/yearly cash inflow.</inlineHelpText>
    <label>Payback Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>