force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfCoolingHeatingPlantsNarr__c.field-meta.xml
<CustomField>
    <fullName>EperfCoolingHeatingPlantsNarr__c</fullName>
    <description>In approximately 200 words, describe the integrated approach to how cooling and heating plants will use an LCC methodology (e.g., NISTH Handbook 135) for equipment selection to include lifetime operating costs based on efficiency, reliability and maintainability of equipment. Provide information about systems explored.</description>
    <inlineHelpText>Describe the integrated approach to how cooling and heating plants will use an LCC methodology for equipment selection to include operating costs based on efficiency, reliability and maintainability of equipment.</inlineHelpText>
    <label>Cooling and Heating Plants LCC Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>