force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfEnvelopeDesignNarr__c.field-meta.xml
<CustomField>
    <fullName>EperfEnvelopeDesignNarr__c</fullName>
    <description>In approximately 200 words, demonstrate an integrated approach to your envelope design. Provide a complete envelope design to include thermal breaks, insulation, continuous air barriers, external sun control devices, hygrothermal analysis and green roof potential Include in the integrated design narrative.</description>
    <inlineHelpText>Demonstrate an integrated approach to your envelope design; include thermal breaks, insulation, continuous air barriers, external sun control devices, hydrothermal analysis and green roof potential.</inlineHelpText>
    <label>Envelope Design Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>