force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfMVAdvmtrsNarr__c.field-meta.xml
<CustomField>
    <fullName>EperfMVAdvmtrsNarr__c</fullName>
    <description>Please explain advanced metering systems and submetering systems (if provided) and address its connectivity to the BAS and remote monitoring capability (i.e., gas, electricity, water, steam, etc.).</description>
    <inlineHelpText>Please explain advanced metering systems and submetering systems (if provided) and address its connectivity to the BAS and remote monitoring capability (i.e., gas, electricity, water, steam, etc.).</inlineHelpText>
    <label>Advanced Metering Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>