force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfMVAdvmtrsSubMeteringNarr__c.field-meta.xml
<CustomField>
    <fullName>EperfMVAdvmtrsSubMeteringNarr__c</fullName>
    <description>Please describe any additional sub- metering, if applicable:</description>
    <inlineHelpText>Please describe any additional sub-metering, if applicable.</inlineHelpText>
    <label>Sub Metering Comments</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>