force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfOnrenSlrHoth2oLifecPbckpd__c.field-meta.xml
<CustomField>
    <fullName>EperfOnrenSlrHoth2oLifecPbckpd__c</fullName>
    <description>Payback Period (in years):</description>
    <inlineHelpText>Please provide project payback period (in years) = total investment cost/yearly cash inflow.</inlineHelpText>
    <label>Payback Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>