force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfOnrenSlrHoth2oMeet30PctGoal__c.field-meta.xml
<CustomField>
    <fullName>EperfOnrenSlrHoth2oMeet30PctGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Meeting 30 % Goal</description>
    <inlineHelpText>Select the checkbox if building is meeting 30% goal.</inlineHelpText>
    <label>Meeting 30 % Goal</label>
    <type>Checkbox</type>
</CustomField>