force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfOnrenSlrHoth2oMeet30PctGoalExpln__c.field-meta.xml
<CustomField>
    <fullName>EperfOnrenSlrHoth2oMeet30PctGoalExpln__c</fullName>
    <description>Narrative about meeting 30% Goal</description>
    <inlineHelpText>Please provide a brief narrative about meeting 30% goal.</inlineHelpText>
    <label>Meeting 30 % Goal Explain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>