force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfProperGlazingNarr__c.field-meta.xml
<CustomField>
    <fullName>EperfProperGlazingNarr__c</fullName>
    <description>In approximately 200 words, describe the integrated approach to the selection of glazing systems, including frames, glass, films, and gasses, based upon visual needs, elevation, orientation, heat loss, and solar load.</description>
    <inlineHelpText>In approximately 200 words, describe the integrated approach to the selection of glazing systems, including frames, glass, films, and gasses, based upon visual needs, elevation, orientation, heat loss, and solar load.</inlineHelpText>
    <label>Glazing Systems Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>