force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfRenergyLccfigsPybkpdBiogas__c.field-meta.xml
<CustomField>
    <fullName>EperfRenergyLccfigsPybkpdBiogas__c</fullName>
    <description>Biogas Payback Period</description>
    <inlineHelpText>Please provide biogas payback period (in years) = total investment cost/yearly cash inflow.</inlineHelpText>
    <label>Biogas Payback Period (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>