force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfRenergyLccfigsPybkpdBiomass__c.field-meta.xml
<CustomField>
    <fullName>EperfRenergyLccfigsPybkpdBiomass__c</fullName>
    <description>Biomass Payback Period</description>
    <inlineHelpText>Please provide biomass payback period (in years) = total investment cost/yearly cash inflow.</inlineHelpText>
    <label>Biomass Payback Period (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>