force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfRenergyLccfigsPybkpdGeothermal__c.field-meta.xml
<CustomField>
    <fullName>EperfRenergyLccfigsPybkpdGeothermal__c</fullName>
    <description>Geothermal Payback Period</description>
    <inlineHelpText>Please provide geothermal payback period (in years) = total investment cost/yearly cash inflow.</inlineHelpText>
    <label>Geothermal Payback Period (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>