force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfRenergyLccfigsPybkpdPv__c.field-meta.xml
<CustomField>
    <fullName>EperfRenergyLccfigsPybkpdPv__c</fullName>
    <description>PV Payback Period</description>
    <inlineHelpText>Please provide PV payback period (in years) = total investment cost/yearly cash inflow.</inlineHelpText>
    <label>PV Payback Period (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>