force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfRenergyLccfigsPybkpdWind__c.field-meta.xml
<CustomField>
    <fullName>EperfRenergyLccfigsPybkpdWind__c</fullName>
    <description>Wind Payback Period</description>
    <inlineHelpText>Please provide wind payback period (in years) = total investment cost/yearly cash inflow.</inlineHelpText>
    <label>Wind Payback Period (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>