force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfRenergyLccfigsSIRGeothermal__c.field-meta.xml
<CustomField>
    <fullName>EperfRenergyLccfigsSIRGeothermal__c</fullName>
    <description>Geothermal SIR</description>
    <inlineHelpText>Please provide the geothermal Savings-to-Investment Ratio (SIR) = Lifetime Savings/Investment.</inlineHelpText>
    <label>Geothermal Savings-To-Investment Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>