force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EperfRenergyLeedEaCredit__c.field-meta.xml
<CustomField>
    <fullName>EperfRenergyLeedEaCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if LEED EA Credit</description>
    <inlineHelpText>Select the checkbox if building has or is pursuing a LEED EA credit.</inlineHelpText>
    <label>LEED EA Credit</label>
    <type>Checkbox</type>
</CustomField>