force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EstarAnticipatedWeeklyOperatingHours__c.field-meta.xml
<CustomField>
    <fullName>EstarAnticipatedWeeklyOperatingHours__c</fullName>
    <description>Anticipated Weekly Operating Hours</description>
    <inlineHelpText>Enter anticipated weekly operating hours for this building.</inlineHelpText>
    <label>Anticipated Weekly Operating Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>