force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EstarBaselineCntPcs__c.field-meta.xml
<CustomField>
    <fullName>EstarBaselineCntPcs__c</fullName>
    <description>Baseline Number of PCs</description>
    <inlineHelpText>Enter baseline number of PCs for this building.</inlineHelpText>
    <label>Baseline Number of PCs</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>