force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EstarBaselineWeeklyOperatingHours__c.field-meta.xml
<CustomField>
    <fullName>EstarBaselineWeeklyOperatingHours__c</fullName>
    <description>Baseline Weekly Operating Hours</description>
    <inlineHelpText>Enter baseline weekly operating hours for this building.</inlineHelpText>
    <label>Baseline Weekly Operating Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>