force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EstarBaselineWorkersOnMainShift__c.field-meta.xml
<CustomField>
    <fullName>EstarBaselineWorkersOnMainShift__c</fullName>
    <description>Baseline Workers on Main Shift</description>
    <inlineHelpText>Enter baseline workers on main shift for this building.</inlineHelpText>
    <label>Baseline Workers on Main Shift</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>