force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/EuasBaselinePerformanceYear__c.field-meta.xml
<CustomField>
    <fullName>EuasBaselinePerformanceYear__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EUAS Baseline Performance Year</label>
    <referenceTo>PBS_EuasPerformance__c</referenceTo>
    <relationshipLabel>gBUILD Project Buildings</relationshipLabel>
    <relationshipName>gBUILD_Project_Buildings_Baseline_Perf</relationshipName>
    <type>Lookup</type>
</CustomField>