force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/FacilityCode__c.field-meta.xml
<CustomField>
    <fullName>FacilityCode__c</fullName>
    <formula>if(
   BldgId__r.Location_Code_Plus__c!=null &amp;&amp;len(BldgId__r.Location_Code_Plus__c)==8&amp;&amp;Upper(right(BldgId__r.Location_Code_Plus__c,2))!=&apos;ZZ&apos;,
   upper(left(BldgId__r.Location_Code_Plus__c,2))+&apos;0000&apos;+upper(right(BldgId__r.Location_Code_Plus__c,2)),
   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Code</label>
    <type>Text</type>
</CustomField>