force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQDmdCntrPressNarr__c.field-meta.xml
<CustomField>
    <fullName>IEQDmdCntrPressNarr__c</fullName>
    <description>In approximately 200 words, describe the integrated approach to designing for building pressurization in the envelope and building program activities. (MPC #27)</description>
    <inlineHelpText>In approximately 200 words, describe the integrated approach to designing for building pressurization in the envelope and building program activities. (MPC #27).</inlineHelpText>
    <label>Pressurization Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>