force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQDmdCntrVentlNarr__c.field-meta.xml
<CustomField>
    <fullName>IEQDmdCntrVentlNarr__c</fullName>
    <description>In approximately 200 words, describe the integrated approach to designing for natural ventilation needs to integrate the requirements for ASHRAE</description>
    <inlineHelpText>In approximately 200 words, describe the integrated approach to designing for natural ventilation needs to integrate the requirements for ASHRAE.</inlineHelpText>
    <label>Ventilation Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>