force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQLemChklstCarpetSys__c.field-meta.xml
<CustomField>
    <fullName>IEQLemChklstCarpetSys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Carpet Systems</description>
    <inlineHelpText>Select the checkbox if low-emitting carpet systems are included in project building scope.</inlineHelpText>
    <label>Carpet Systems</label>
    <type>Checkbox</type>
</CustomField>