force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQLemChklstCompositeWoodProducts__c.field-meta.xml
<CustomField>
    <fullName>IEQLemChklstCompositeWoodProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Composite Wood Products</description>
    <inlineHelpText>Select the checkbox if low-emitting composite wood products are included in project building scope.</inlineHelpText>
    <label>Composite Wood Products</label>
    <type>Checkbox</type>
</CustomField>