force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQLemChklstFurnishings__c.field-meta.xml
<CustomField>
    <fullName>IEQLemChklstFurnishings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Furnishings</description>
    <inlineHelpText>Select the checkbox if low-emitting furnishings are included in project building scope.</inlineHelpText>
    <label>Furnishings</label>
    <type>Checkbox</type>
</CustomField>