force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQLemNarr__c.field-meta.xml
<CustomField>
    <fullName>IEQLemNarr__c</fullName>
    <description>Explain how using low-emitting materials; please address how achieving each of the low-emitting categories: composite wood, products, adhesives, sealants, interior paints and finishes, solvents, carpet systems, janitorial supplies, and furnishings. (LEED EQ Credit 4.1- 4.4 Low-Emitting Materials)</description>
    <inlineHelpText>Explain how the project building is using low-emitting materials in the following categories: composite wood, products, adhesives, sealants, interior paints and finishes, solvents, carpet systems, janitorial supplies, and furnishings.</inlineHelpText>
    <label>Low-Emitting Materials Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>