force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQLghtCtrlLccfigsPbckpd__c.field-meta.xml
<CustomField>
    <fullName>IEQLghtCtrlLccfigsPbckpd__c</fullName>
    <description>Payback Period (in years):</description>
    <inlineHelpText>Payback Period (in years) = total investment cost/yearly cash inflow.</inlineHelpText>
    <label>Payback Period (Years)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>