force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQLghtCtrlLccfigsSir__c.field-meta.xml
<CustomField>
    <fullName>IEQLghtCtrlLccfigsSir__c</fullName>
    <description>Savings-to-Investment Ratio (SIR):</description>
    <inlineHelpText>Please provide Savings-to-Investment Ratio (SIR) = Lifetime Savings/Investment</inlineHelpText>
    <label>Savings-to-Investment Ratio (SIR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>