force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQLghtCtrlNarr__c.field-meta.xml
<CustomField>
    <fullName>IEQLghtCtrlNarr__c</fullName>
    <description>Please provide description of lighting system and controls intent (electrical engineer / lighting designer).</description>
    <inlineHelpText>Please provide description of lighting system and controls intent (electrical engineer / lighting designer).</inlineHelpText>
    <label>Lighting Controls Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>