force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IEQMoistureControlNarr__c.field-meta.xml
<CustomField>
    <fullName>IEQMoistureControlNarr__c</fullName>
    <description>In approximately 200 words, describe the integrated approach to considering moisture control strategies to reduce risk for mold and damaging  moisture. Please demonstrate worked in tandem with engineer -- address material selection, hyrgrothermal analysis (MPC #26)</description>
    <inlineHelpText>Describe the integrated approach to considering moisture control strategies to reduce risk for mold and damaging moisture.</inlineHelpText>
    <label>Moisture Control Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>