force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ImportKey__c.field-meta.xml
<CustomField>
    <fullName>ImportKey__c</fullName>
    <description>A key used to aid in the initial data import tasks.</description>
    <externalId>true</externalId>
    <inlineHelpText>A key used to aid in the initial data import tasks.</inlineHelpText>
    <label>Import Key</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>