force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnComishagtIndContractHolder__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnComishagtIndContractHolder__c</fullName>
    <description>Who is the Commissioning Agent contract with?</description>
    <inlineHelpText>Please select the commissioning agent for this contract.</inlineHelpText>
    <label>Contract Holder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cmc</fullName>
            </value>
            <value>
                <fullName>Gsa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other:PleaseSpecify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>