force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnComishagtIndDateHired__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnComishagtIndDateHired__c</fullName>
    <description>Date Commissioning Agent Hired</description>
    <inlineHelpText>Enter date commissioning agent was hired.</inlineHelpText>
    <label>Date Hired</label>
    <type>Date</type>
</CustomField>