force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnComishagtIndDateStarted__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnComishagtIndDateStarted__c</fullName>
    <description>Date Commissioning Started</description>
    <inlineHelpText>Enter date commissioning agent started.</inlineHelpText>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>