force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnComishagtIndStageAtComish__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnComishagtIndStageAtComish__c</fullName>
    <description>At what stage was the commissioning brought in?</description>
    <inlineHelpText>Select the stage (Pre-Project, Preliminary Design, 35% Schematic Design, 90%/Construction Documents, 50% Construction, Project Closeout/ Occupancy )at which Commissioning was brought into the project.</inlineHelpText>
    <label>Stage At Commissioning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>35PercentSchematicDesign</fullName>
            </value>
            <value>
                <fullName>50PercentConstruction</fullName>
            </value>
            <value>
                <fullName>90PercentConstructionDocuments</fullName>
            </value>
            <value>
                <fullName>PreliminaryDesign</fullName>
            </value>
            <value>
                <fullName>PreProject</fullName>
            </value>
            <value>
                <fullName>ProjectCloseoutOccupancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>