force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustAcousticsEngineer__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustAcousticsEngineer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Acoustics Engineer</description>
    <inlineHelpText>Select the checkbox if team contains an acoustics engineer.</inlineHelpText>
    <label>Acoustics Engineer</label>
    <type>Checkbox</type>
</CustomField>