force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustArchitect__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustArchitect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Architect</description>
    <inlineHelpText>Select the checkbox if team includes an architect.</inlineHelpText>
    <label>Architect</label>
    <type>Checkbox</type>
</CustomField>