force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustAverageMeetingFrequency__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustAverageMeetingFrequency__c</fullName>
    <description>Frequency of Integrated Design Team Meetings: Please report the average frequency of your integrated design team meetings.</description>
    <inlineHelpText>Please select the frequency of design team meetings.</inlineHelpText>
    <label>Average meeting frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2TimesMonth</fullName>
            </value>
            <value>
                <fullName>Every2Months</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>