force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustBldgOperationsNarr__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustBldgOperationsNarr__c</fullName>
    <description>In approximately 200 words, show an INTEGRATED APPROACH to Building Operations. Describe how you ensured the building was designed in a way that its continued operation and high performance can be maintained.</description>
    <inlineHelpText>In approximately 200 words, show an integrated approach to Building Operations. Describe how the building&apos;s continued operation and high performance can be maintained.</inlineHelpText>
    <label>Building Operations Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>