force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustBldgUsersFacilityMngr__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustBldgUsersFacilityMngr__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Building Users Facility Manager</description>
    <inlineHelpText>Select the checkbox if team includes a building users facility manager.</inlineHelpText>
    <label>Building Users Facility Manager</label>
    <type>Checkbox</type>
</CustomField>