force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustCertLightingDsgnrEng__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustCertLightingDsgnrEng__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Certified Lighting DesignerEngineer</description>
    <inlineHelpText>Select the checkbox if team includes a certified lighting designer engineer.</inlineHelpText>
    <label>Certified Lighting Designer Engineer</label>
    <type>Checkbox</type>
</CustomField>