force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustClientOwnersRep__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustClientOwnersRep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Client Owners Representative</description>
    <inlineHelpText>Select the checkbox if team includes a client owners representative.</inlineHelpText>
    <label>Client Owners Representative</label>
    <type>Checkbox</type>
</CustomField>