force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustComishAgent__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustComishAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning Agent</description>
    <inlineHelpText>Select the checkbox if team includes a commissioning agent.</inlineHelpText>
    <label>Commissioning Agent</label>
    <type>Checkbox</type>
</CustomField>