force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustConstructionMngr__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustConstructionMngr__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Construction Manager</description>
    <inlineHelpText>Select the checkbox if team includes a construction manager.</inlineHelpText>
    <label>Construction Manager</label>
    <type>Checkbox</type>
</CustomField>