force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustElectricUtilityRep__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustElectricUtilityRep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Electric Utility Representative</description>
    <inlineHelpText>Select the checkbox if team includes a electric utility representative.</inlineHelpText>
    <label>Electric Utility Representative</label>
    <type>Checkbox</type>
</CustomField>