force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustEnergyCnsltnt__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustEnergyCnsltnt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Energy Consultant</description>
    <inlineHelpText>Select the checkbox if team includes an energy consultant.</inlineHelpText>
    <label>Energy Consultant</label>
    <type>Checkbox</type>
</CustomField>