force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustEnvtlBldgCnsltnt__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustEnvtlBldgCnsltnt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Environmental Building Consultant</description>
    <inlineHelpText>Select the checkbox if team includes an environmental building consultant.</inlineHelpText>
    <label>Environmental Building Consultant</label>
    <type>Checkbox</type>
</CustomField>