force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustGeneralContractor__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustGeneralContractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if General Contractor</description>
    <inlineHelpText>Select the checkbox if team includes a general contractor.</inlineHelpText>
    <label>General Contractor</label>
    <type>Checkbox</type>
</CustomField>