force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustGsaHpgbTeamMember__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustGsaHpgbTeamMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if GSA HPGB Team Member</description>
    <inlineHelpText>Select the checkbox if team includes a GSA HPGB team member.</inlineHelpText>
    <label>GSA HPGB Team Member</label>
    <type>Checkbox</type>
</CustomField>