force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustIeqCnsltnt__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustIeqCnsltnt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if IEQ Consultant</description>
    <inlineHelpText>Select the checkbox if team includes an IEQ consultant.</inlineHelpText>
    <label>IEQ Consultant</label>
    <type>Checkbox</type>
</CustomField>