force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustIntegratedDesignNarr__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustIntegratedDesignNarr__c</fullName>
    <description>Provide a narrative that 1) defines the integrated design process, and 2) describes a plan to determine and reach HPGB performance goals, engage project stakeholders, identify feedback mechanism to meet HPGB goals, and resolution processes.</description>
    <inlineHelpText>Please provide a narrative that 1) defines the integrated design process, and 2) describes a plan to determine and reach HPGB performance goals, engage project stakeholders, and identify a feedback mechanism for best practices and lessons learned.</inlineHelpText>
    <label>Integrated Design Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>