force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustInteriorDesigner__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustInteriorDesigner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Interior Designer</description>
    <inlineHelpText>Select the checkbox if team includes an interior designer.</inlineHelpText>
    <label>Interior Designer</label>
    <type>Checkbox</type>
</CustomField>