force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustLandscapeArchitect__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustLandscapeArchitect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Landscape Architect</description>
    <inlineHelpText>Select the checkbox if team includes a landscape architect.</inlineHelpText>
    <label>Landscape Architect</label>
    <type>Checkbox</type>
</CustomField>