force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustLeedAccreditedProf__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustLeedAccreditedProf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if LEED Accredited Professional</description>
    <inlineHelpText>Select the checkbox if team includes a LEED accredited professional.</inlineHelpText>
    <label>LEED Accredited Professional</label>
    <type>Checkbox</type>
</CustomField>