force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustMechanicalEngineer__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustMechanicalEngineer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Mechanical Engineer</description>
    <inlineHelpText>Select the checkbox if team includes a mechanical engineer.</inlineHelpText>
    <label>Mechanical Engineer</label>
    <type>Checkbox</type>
</CustomField>