force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustOther__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustOther__c</fullName>
    <description>Textbox for Other</description>
    <inlineHelpText>Please enter description of other team member(s).</inlineHelpText>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>