force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/IntdsgnIntSustOtherSpecialized__c.field-meta.xml
<CustomField>
    <fullName>IntdsgnIntSustOtherSpecialized__c</fullName>
    <description>Textbox for Other Specialized Consultants</description>
    <inlineHelpText>Please enter description of other specialized team member(s).</inlineHelpText>
    <label>Other Specialized Consultants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>